feat: Add automatic detection and disabling of conflicting services (v1.0.1)
This update addresses conflicts with other power management services
that can interfere with PowerVigil's operation.

New Features:
- Added powervigil-disable-conflicts utility to disable conflicting services
- Automatic detection and disabling of conflicting services during configuration
- Enhanced verification script to detect and report conflicts

Services Now Handled:
- power-profiles-daemon: Can override performance settings
- upower: Can trigger power-saving behaviors
- thermald: Thermal management that may throttle performance
- tlp: Advanced power management that conflicts with PowerVigil
- laptop-mode: Power saving for laptops
- auto-cpufreq: Automatic CPU frequency scaling

Changes:
- Configuration script now includes Layer 12b for conflicting services
- Verification script reports conflicts as critical issues
- Better guidance on resolving conflicts
- Updated to version 1.0.1

This ensures PowerVigil maintains complete control over power
management without interference from other services.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+powervigil (1.0.1-1) stable; urgency=medium
+
+  * Added automatic detection and disabling of conflicting services
+  * New powervigil-disable-conflicts utility
+  * Fixed debian build process to preserve maintainer scripts
+  * Improved verification script conflict detection
+  * Added support for disabling power-profiles-daemon and upower
+
+ -- Shaun Prince <suparious@solidrust.net>  Wed, 22 Jan 2025 11:30:00 -0700
+
 powervigil (1.0.0-1) stable; urgency=medium
 
   * Initial release (Closes: #XXXXXX)
