--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+powervigil (1.0.2-1) stable; urgency=critical
+
+  * CRITICAL: Fixed boot failure on UEFI/modern systems
+  * Removed acpi=off parameter that breaks hardware detection
+  * Removed noapic/nolapic that break USB and storage controllers  
+  * Removed other dangerous kernel parameters
+  * Systems with v1.0.1 should NOT reboot before applying fix
+  * Added emergency-fix-boot.sh for affected systems
+
+ -- Shaun Prince <suparious@solidrust.net>  Wed, 22 Jan 2025 12:00:00 -0700
+
 powervigil (1.0.1-1) stable; urgency=medium
 
   * Added automatic detection and disabling of conflicting services
